--- a/Windows/Controls/FieldConditionView.xaml
+++ b/Windows/Controls/FieldConditionView.xaml
@@ -22,7 +22,8 @@
         <Label Name="lblValue" Content="Value" />
         <TextBox Name="txtBxValue" MinWidth="150" MaxWidth="300" Margin="0, 0, 10, 0" Text="{Binding TargetValue}" />
 
+        <CheckBox Name="chkBxNegative" Margin="0, 0, 10, 0" Content="Negative Result" IsChecked="{Binding DismissMatch}" />
         <CheckBox Name="chkBxDefault" Margin="0, 0, 10, 0" Content="Match by Default" IsChecked="{Binding DefaultMatch}" />
-        <CheckBox Name="chkBxIgnored" Margin="0, 0, 10, 0" Content="Ignored" IsChecked="{Binding Ignored}" />
+        <CheckBox Name="chkBxDismiss" Margin="0, 0, 10, 0" Content="Dismissed" IsChecked="{Binding DismissMatch}" />
     </StackPanel>
 </UserControl>
