--- a/Windows/ConditionDetailWindow.xaml
+++ b/Windows/ConditionDetailWindow.xaml
@@ -17,6 +17,9 @@
             <Style TargetType="RadioButton">
                 <Setter Property="Margin" Value="3,4" />
             </Style>
+            <Style TargetType="CheckBox">
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
         </ResourceDictionary>
     </Window.Resources>
     <StackPanel Orientation="Vertical">
