--- a/Windows/Controls/FilterListView.xaml
+++ b/Windows/Controls/FilterListView.xaml
@@ -57,9 +57,28 @@
                 <DataTemplate>
                     <Border BorderBrush="SkyBlue" BorderThickness="1">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding FieldKey}" Margin="3" />
-                            <TextBlock Text="{Binding MatchOperator, Converter={StaticResource MatchOperatorToStringConverter}}" Margin="3" />
-                            <TextBlock Text="{Binding TargetValue}" Margin="3" />
+                            <StackPanel.Resources>
+                                <ResourceDictionary>
+                                    <Style x:Key="textWhenName" TargetType="TextBlock">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding ConditionName, Converter={StaticResource ObjectNullOrEmptyConverter}}" Value="True">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                    <Style x:Key="textWhenNoName" TargetType="TextBlock">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding ConditionName, Converter={StaticResource ObjectNullOrEmptyConverter}}" Value="False">
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </ResourceDictionary>
+                            </StackPanel.Resources>
+                            <TextBlock Text="{Binding ConditionName}" Margin="3" Style="{StaticResource textWhenName}" />
+                            <TextBlock Text="{Binding FieldKey}" Margin="3" Style="{StaticResource textWhenNoName}" />
+                            <TextBlock Text="{Binding MatchOperator, Converter={StaticResource MatchOperatorToStringConverter}}" Margin="3" Style="{StaticResource textWhenNoName}" />
+                            <TextBlock Text="{Binding TargetValue}" Margin="3" Style="{StaticResource textWhenNoName}" />
                         </StackPanel>
                     </Border>
                 </DataTemplate>
