--- a/Windows/ConditionDetailWindow.xaml
+++ b/Windows/ConditionDetailWindow.xaml
@@ -37,7 +37,7 @@
         </GroupBox>
 
         <RadioButton Name="rdBtnMultiple" Content="Use multiple field condtion"
-                     GroupName="condition" Checked="RdBtnCondition_Checked" />        
+                     GroupName="condition" Checked="RdBtnCondition_Checked" />
         <GroupBox Name="grpBxMultipleField" Header="Multiple Field">
             <StackPanel>
                 <Grid>
@@ -61,49 +61,99 @@
 
                 <TreeView Name="trConditions" MinHeight="50">
                     <TreeView.Resources>
+
+                        <Style x:Key="checkBoxInvert" TargetType="CheckBox">
+                            <Setter Property="ToolTip" Value="Invert match result" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                                    <Setter Property="Content" Value="☀" />
+                                    <Setter Property="Foreground" Value="OrangeRed" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                                    <Setter Property="Content" Value="🌙" />
+                                    <Setter Property="Foreground" Value="Blue" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style x:Key="checkBoxDefault" TargetType="CheckBox">
+                            <Setter Property="ToolTip" Value="Match by Default" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                                    <Setter Property="Content" Value="☆" />
+                                    <Setter Property="Foreground" Value="Orange" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                                    <Setter Property="Content" Value="★" />
+                                    <Setter Property="Foreground" Value="Gold" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+
+                        <Style x:Key="checkBoxDismiss" TargetType="CheckBox">
+                            <Setter Property="ToolTip" Value="Dismiss this condition in match" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                                    <Setter Property="Content" Value="🛑" />
+                                    <Setter Property="Foreground" Value="Green" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                                    <Setter Property="Content" Value="⛔" />
+                                    <Setter Property="Foreground" Value="Red" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+
                         <HierarchicalDataTemplate DataType="{x:Type local:ConditionGroupNodeVO}" ItemsSource="{Binding Conditions}">
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel.ContextMenu>
-                                    <ContextMenu>
-                                        <MenuItem Name="mnItmAddConditionGroup" Header="Add group" Tag="{Binding}" Click="MuItmAddConditionGroup_Click" />
-                                        <MenuItem Name="mnItmAddCondition" Header="Add field" Tag="{Binding}" Click="MnItmAddCondition_Click" />
-                                    </ContextMenu>
-                                </StackPanel.ContextMenu>
-                                <ComboBox ItemsSource="{StaticResource GroupMatchModes}" SelectedValue="{Binding MatchMode}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource MatchModeToStringConverter}}" />
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
-                                <CheckBox Content="Negative" IsChecked="{Binding NegativeMatch}" />
-                                <CheckBox Content="Default" IsChecked="{Binding DefaultMatch}" />
-                                <CheckBox Content="Dismiss" IsChecked="{Binding DismissMatch}" />
-                            </StackPanel>
+                            <Border BorderBrush="GreenYellow" BorderThickness="1">
+                                <StackPanel Orientation="Horizontal">
+                                    <StackPanel.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem Name="mnItmAddConditionGroup" Header="Add group" Tag="{Binding}" Click="MuItmAddConditionGroup_Click" />
+                                            <MenuItem Name="mnItmAddCondition" Header="Add field" Tag="{Binding}" Click="MnItmAddCondition_Click" />
+                                        </ContextMenu>
+                                    </StackPanel.ContextMenu>
+                                    <ComboBox ItemsSource="{StaticResource GroupMatchModes}" SelectedValue="{Binding MatchMode}">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Converter={StaticResource MatchModeToStringConverter}}" />
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+                                </StackPanel>
+                            </Border>
                         </HierarchicalDataTemplate>
                         
                         <DataTemplate DataType="{x:Type local:FieldConditionNodeVO}">
-                            <StackPanel Orientation="Horizontal">
-                                <Label Name="lblKey" Content="Key" />
-                                <TextBox Name="txtBxKey" MinWidth="100" MaxWidth="200" Margin="0, 0, 10, 0" Text="{Binding FieldKey}" />
+                            <Border BorderBrush="SkyBlue" BorderThickness="1">
+                                <StackPanel Orientation="Horizontal">
+                                    <Label Name="lblKey" Content="Key" />
+                                    <TextBox Name="txtBxKey" MinWidth="100" MaxWidth="200" Margin="0, 0, 10, 0" Text="{Binding FieldKey}" />
 
-                                <ComboBox Name="cmbBxOperator" Width="100" Margin="0, 0, 10, 0"
+                                    <ComboBox Name="cmbBxOperator" Width="100" Margin="0, 0, 10, 0"
                                           ItemsSource="{StaticResource TextMatchOperators}"
                                           SelectedValue="{Binding MatchOperator}">
-                                    <ComboBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Converter={StaticResource MatchOperatorToStringConverter}}" />
-                                        </DataTemplate>
-                                    </ComboBox.ItemTemplate>
-                                </ComboBox>
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Converter={StaticResource MatchOperatorToStringConverter}}" />
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
 
-                                <Label Name="lblValue" Content="Value" />
-                                <TextBox Name="txtBxValue" MinWidth="150" MaxWidth="300" Margin="0, 0, 10, 0" Text="{Binding TargetValue}" />
+                                    <Label Name="lblValue" Content="Value" />
+                                    <TextBox Name="txtBxValue" MinWidth="150" MaxWidth="300" Margin="0, 0, 10, 0" Text="{Binding TargetValue}" />
 
-                                <CheckBox Margin="0, 0, 10, 0" Content="Negative Result" IsChecked="{Binding NegativeMatch}" />
-                                <CheckBox Margin="0, 0, 10, 0" Content="Match by Default" IsChecked="{Binding DefaultMatch}" />
-                                <CheckBox Margin="0, 0, 10, 0" Content="Dismissed" IsChecked="{Binding DismissMatch}" />
-                            </StackPanel>
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+                                </StackPanel>
+                            </Border>
                         </DataTemplate>
                     </TreeView.Resources>
                     <TreeView.ItemContainerStyle>
