--- a/Windows/Controls/FieldConditionView.xaml
+++ b/Windows/Controls/FieldConditionView.xaml
@@ -16,6 +16,51 @@
                 <Style TargetType="CheckBox">
                     <Setter Property="VerticalAlignment" Value="Center" />
                 </Style>
+
+                <Style x:Key="checkBoxInvert" TargetType="CheckBox">
+                    <Setter Property="ToolTip" Value="Invert match result" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                            <Setter Property="Content" Value="☀" />
+                            <Setter Property="Foreground" Value="OrangeRed" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                            <Setter Property="Content" Value="🌙" />
+                            <Setter Property="Foreground" Value="Blue" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="checkBoxDefault" TargetType="CheckBox">
+                    <Setter Property="ToolTip" Value="Match by Default" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                            <Setter Property="Content" Value="☆" />
+                            <Setter Property="Foreground" Value="Orange" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                            <Setter Property="Content" Value="★" />
+                            <Setter Property="Foreground" Value="Gold" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="checkBoxDismiss" TargetType="CheckBox">
+                    <Setter Property="ToolTip" Value="Dismiss this condition in match" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                            <Setter Property="Content" Value="🛑" />
+                            <Setter Property="Foreground" Value="Green" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                            <Setter Property="Content" Value="⛔" />
+                            <Setter Property="Foreground" Value="Red" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
             </ResourceDictionary>
         </StackPanel.Resources>
         
@@ -33,8 +78,8 @@
         <Label Name="lblValue" Content="Value" />
         <TextBox Name="txtBxValue" MinWidth="150" MaxWidth="300" Margin="0, 0, 10, 0" Text="{Binding TargetValue}" />
 
-        <CheckBox Name="chkBxNegative" Margin="0, 0, 10, 0" Content="Negative Result" IsChecked="{Binding NegativeMatch}" />
-        <CheckBox Name="chkBxDefault" Margin="0, 0, 10, 0" Content="Match by Default" IsChecked="{Binding DefaultMatch}" />
-        <CheckBox Name="chkBxDismiss" Margin="0, 0, 10, 0" Content="Dismissed" IsChecked="{Binding DismissMatch}" />
+        <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
+        <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
+        <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
     </StackPanel>
 </UserControl>
