--- a/Windows/Controls/FilterListView.xaml
+++ b/Windows/Controls/FilterListView.xaml
@@ -8,6 +8,85 @@
              d:DataContext="{d:DesignInstance Type=local:FilterListViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <Grid.Resources>
+            <ResourceDictionary>
+                <Style x:Key="checkBoxInvert" TargetType="CheckBox">
+                    <Setter Property="ToolTip" Value="Invert match result" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                            <Setter Property="Content" Value="☀" />
+                            <Setter Property="Foreground" Value="OrangeRed" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                            <Setter Property="Content" Value="🌙" />
+                            <Setter Property="Foreground" Value="Blue" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="checkBoxDefault" TargetType="CheckBox">
+                    <Setter Property="ToolTip" Value="Match by Default" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                            <Setter Property="Content" Value="☆" />
+                            <Setter Property="Foreground" Value="Orange" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                            <Setter Property="Content" Value="★" />
+                            <Setter Property="Foreground" Value="Gold" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="textInvert" TargetType="TextBlock">
+                    <Setter Property="ToolTip" Value="Invert match result" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                            <Setter Property="Text" Value="☀" />
+                            <Setter Property="Foreground" Value="OrangeRed" />
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                            <Setter Property="Text" Value="🌙" />
+                            <Setter Property="Foreground" Value="Blue" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="textDefault" TargetType="TextBlock">
+                    <Setter Property="ToolTip" Value="Match by Default" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                            <Setter Property="Text" Value="☆" />
+                            <Setter Property="Foreground" Value="Orange" />
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                            <Setter Property="Text" Value="★" />
+                            <Setter Property="Foreground" Value="Gold" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+
+                <Style x:Key="textDismiss" TargetType="TextBlock">
+                    <Setter Property="ToolTip" Value="Dismiss this condition in match" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                            <Setter Property="Text" Value="🛑" />
+                            <Setter Property="Foreground" Value="Green" />
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                            <Setter Property="Text" Value="⛔" />
+                            <Setter Property="Foreground" Value="Red" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ResourceDictionary>
+        </Grid.Resources>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -30,10 +109,8 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
 
-            <CheckBox Name="chkBxNegative" Margin="0, 0, 10, 0" VerticalAlignment="Center"
-                      Content="Negative Result" IsChecked="{Binding NegativeMatch}" />
-            <CheckBox Name="chkBxDefault" Margin="0, 0, 10, 0" VerticalAlignment="Center"
-                      Content="Match by Default" IsChecked="{Binding DefaultMatch}" />
+            <CheckBox Name="chkBxNegative" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
+            <CheckBox Name="chkBxDefault" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
 
         </StackPanel>
 
@@ -82,6 +159,9 @@
                             <TextBlock Text="{Binding FieldKey}" Margin="3" Style="{StaticResource textWhenNoName}" />
                             <TextBlock Text="{Binding MatchOperator, Converter={StaticResource MatchOperatorToStringConverter}}" Margin="3" Style="{StaticResource textWhenNoName}" />
                             <TextBlock Text="{Binding TargetValue}" Margin="3" Style="{StaticResource textWhenNoName}" />
+                            <TextBlock Margin="3" Style="{StaticResource textInvert}" />
+                            <TextBlock Margin="3" Style="{StaticResource textDefault}" />
+                            <TextBlock Margin="3" Style="{StaticResource textDismiss}" />
                         </StackPanel>
                     </Border>
                 </DataTemplate>
